[package]
name = "lambdascript"
version = "0.2.4"
authors = ["Chuck Liang"]
edition = "2021"
license = "MIT"
description = "Instructional program detailing the beta reduction of typed and untyped lambda terms"
repository = "https://github.com/chuckcscccl/lambdascript/"
keywords = ["lambda-calculus", "lambda", "beta-reduction", "education"]
categories = ["command-line-utilities", "parsing", "mathematics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustlr = { version = "0.6", default-features = false }
fixedstr = { version = "0.5", features = ["no-alloc"] }
#fixedstr = { path = "../fixedstr", features = ["no-alloc"] }
#chrono = "0.4"
#curl = "0.4.44"
